Implement a matrix bot inside the portal